--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,6 +1,6 @@
 page-welcome {
     #welcome{
-        background: color($colors, energy);
+        //background: color($colors, energy);
         h1{
             font-size: 52px;
             margin-top:50px
