--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,8 +9,8 @@ $font-path: "../assets/fonts";
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
-$app-direction: ltr;
-
+//$app-direction: ltr;
+//$app-direction: rtl ;
 
 @import "ionic.globals";
 
