--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,3 +17,17 @@
 // * {
 //     direction:rtl;
 // }
+
+.home{
+    background:color($colors, primary);
+    color:color($colors, light);
+    margin-top:30px;
+}
+
+.toolbar-title{
+    text-align: center;
+}
+
+.tabs-md .tab-button-icon{
+    color:#ccc;
+}
