--- a/src/pages/membersMng/memberbalance/memberbalance.scss
+++ b/src/pages/membersMng/memberbalance/memberbalance.scss
@@ -20,5 +20,11 @@ page-memberbalance {
           color:red;
       }
 
+      .endContent{
+        display: flex !important;
+        justify-content: flex-end !important;
+        width:20%;
+      }
+
       
 }
