--- a/src/pages/settingsMng/signin/signin.scss
+++ b/src/pages/settingsMng/signin/signin.scss
@@ -1,10 +1,44 @@
 page-signin {
+    #signIn{
+            
+        //margin-top: 10%;
+        padding:25px;
+        border: solid;
+        border-width: 1px;
+        border-color:color($colors,secondary);
+        border-radius: 50px 50px 50px 50px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);    
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        background-color: white;
     .error-box{
-        color: red;
-        //padding-top: 2px;
-        //margin-top: 1px;
-    }
-    .input-box{
-        border: 1px solid #ea6153;
-    }
+      color: red;
+      //padding-top: 2px;
+      //margin-top: 1px;
+  }
+  .input-box{
+      border: 1px solid #ea6153;
+  }
+  .myBTN{
+    margin-left: auto;
+    margin-right: auto; 
+    opacity: 0.8;
+    background-color: color($colors,myGreen);
+    width: 80%;
+    margin-top:20px;
+    border-radius: 15px 15px 15px 0px;
+  }
+ 
+}
+#signIn:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+
+  #main{
+    background: #abbaab;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffffff, #abbaab);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffffff, #abbaab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+    
+  }
 }
