--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,6 +1,9 @@
 page-welcome {
     #welcome{
-        //background: color($colors, energy);
+        //background: color($colors, secondary);
+        background-image: url('../assets/imgs/5.jpg');
+        background-repeat: no-repeat;
+        
         h1{
             font-size: 52px;
             margin-top:50px
@@ -11,6 +14,48 @@ page-welcome {
         .logo{
             height: 100px;
         }
+        .signUpBTN{
+            
+            margin-left: auto;
+            margin-right: auto; 
+            opacity: 0.8;
+            background-color: color($colors,myGreen);
+            width: 80%;
+            border-radius: 15px 15px 15px 0px;
+        }
+        .signInBTN{
+            margin-top: 10px;
+            margin-left: auto;
+            margin-right: auto; 
+            opacity: 0.8;
+            background-color: color($colors,myGreen);
+            width: 80%;
+            border-radius: 15px 15px 15px 0px;
+        }
+        .myDiv{
+            background-color: white;
+            opacity: 0.7;
+            border-radius: 35px 35px 35px 0px;
+            padding-top:6px;
+            padding-right: 10px;
+            padding-left: 5px;
+            text-align: center;
+            padding-bottom:30px;
+            
+        }
+        .controls{
+            margin-top:120px;
+            
+            // display: flex !important;
+            // align-items: center !important;
+            // justify-content: center !important;
+        }
+        .hints{
+            font-size: 17px;
+            text-align: center;
+        }
     }
-    }
+
+    
+}
     
