--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,7 +11,7 @@ $font-path: "../assets/fonts";
 // http://ionicframework.com/docs/theming/rtl-support/
 //$app-direction: ltr;
 //$app-direction: rtl ;
-
+$app-direction: multi;
 @import "ionic.globals";
 
 
@@ -50,7 +50,8 @@ $colors: (
   dark:       #222,
   lightb: rgb(184, 219, 228),
   color2: rgb(77, 180, 77),
-  color3:#66ff66
+  color3:#66ff66,
+  myGreen:#1aad5c
 );
 
  $toolbar-md-background: color($colors,secondary);
